Fix for all 3 /recipes routes + Added Routes status to TODO file
